new method in section 3

--- a/manuscript/citations.bib
+++ b/manuscript/citations.bib
@@ -247,3 +247,37 @@
   year =	 1978,
   publisher =	 {Taylor \& Francis}
 }
+
+@article{hyndman2008automatic,
+    title = {Automatic tIme Series Forecasting: {T}he Forecast Package
+      for {R}},
+    author = {Rob J Hyndman and Yeasmin Khandakar},
+    journal = {Journal of Statistical Software},
+    volume = {26},
+    number = {3},
+    pages = {1--22},
+    year = {2008},
+    doi = {10.18637/jss.v027.i03},
+  }
+
+@article{mcleod1975derivation,
+  title={Derivation of the Theoretical Autocovariance Function of Autoregressive-Moving Average Time Series},
+  author={McLeod, Ian},
+  journal={Applied Statistics},
+  volume={24},
+  number={2},
+  pages={255--256},
+  year={1975},
+  publisher={Royal Statistical Society}
+}
+
+  @Article{mcleod2007algorithms,
+    title = {Algorithms for Linear Time Series Analysis: {W}ith {R}
+      Package},
+    author = {A. I. McLeod and Hao Yu and Zinovi Krougly},
+    journal = {Journal of Statistical Software},
+    year = {2007},
+    volume = {23},
+    number = {5},
+    url = {http://www.jstatsoft.org/v23/i05/},
+  }
