--- a/manuscript/citations.bib
+++ b/manuscript/citations.bib
@@ -122,6 +122,8 @@
   title =	 {Two guidelines for bootstrap hypothesis testing},
   author =	 {Hall, Peter and Wilson, Susan R},
   journal =	 {Biometrics},
+  volume =       47,
+  number =       2,
   pages =	 {757--762},
   year =	 1991,
   publisher =	 {JSTOR}
@@ -130,7 +132,8 @@
 @Book{hofert2018elements,
   title =	 {{E}lements of {C}opula {M}odeling with \textsf{R}},
   year =	 2018,
-  publisher =	 {Springer Use R! Series},
+  publisher =	 {Springer},
+  address =      {New York},
   isbn =	 {978-3-319-89635-9},
   url =		 {http://www.springer.com/de/book/9783319896342},
   author =	 {Marius Hofert and Ivan Kojadinovic and Martin Maechler and Jun
@@ -159,13 +162,13 @@
 }
 
 @article{lanzante2021testing,
-  author =	 {lanzante, John},
+  author =	 {Lanzante, John R.},
   year =	 2021,
   month =	 05,
   pages =	 {6314-–6323},
-  title =	 {Testing For Differences Between Two Distributions In The
+  title =	 {Testing For Differences Between Two Distributions in The
                   Presence Of Serial Correlation Using the
-                  {K}olmogorov-–{S}mirnov and {K}uiper's Tests},
+                  {K}olmogorov--{S}mirnov and {K}uiper's Tests},
   volume =	 41,
   journal =	 {International Journal of Climatology}
 }
@@ -185,7 +188,7 @@
 @article{marsaglia2003evaluating,
   author =	 {Marsaglia, George and Tsang, Wai Wan and Wang, Jingbo},
   journal =	 {Journal of Statistical Software},
-  number =	 18,
+  volume =       {8(18)},
   pages =	 {1--4},
   title =	 {Evaluating {K}olmogorov's Distribution},
   volume =	 8,
@@ -204,7 +207,7 @@
 }
 
 @article{noether1963note,
-  title =	 {Note on the {K}olmogorov statistic in the discrete case},
+  title =	 {Note on the {K}olmogorov Statistic in the Discrete Case},
   author =	 {Gottfried E. Noether},
   journal =	 {Metrika},
   year =	 1963,
@@ -213,8 +216,8 @@
 }
 
 @article{smirnov1948table,
-  title =	 {Table for estimating the goodness of fit of empirical
-                  distributions},
+  title =	 {Table for Estimating the Goodness of Fit of Empirical
+                  Distributions},
   author =	 {Smirnov, Nickolay},
   journal =	 {The Annals of Mathematical Statistics},
   volume =	 19,
@@ -249,12 +252,11 @@
 }
 
 @article{hyndman2008automatic,
-    title = {Automatic tIme Series Forecasting: {T}he Forecast Package
+    title = {Automatic Time Series Forecasting: {T}he {forecast} Package
       for {R}},
     author = {Rob J Hyndman and Yeasmin Khandakar},
     journal = {Journal of Statistical Software},
-    volume = {26},
-    number = {3},
+    volume = {26(3)},
     pages = {1--22},
     year = {2008},
     doi = {10.18637/jss.v027.i03},
@@ -271,13 +273,13 @@
   publisher={Royal Statistical Society}
 }
 
-  @Article{mcleod2007algorithms,
+  @article{mcleod2007algorithms,
     title = {Algorithms for Linear Time Series Analysis: {W}ith {R}
       Package},
     author = {A. I. McLeod and Hao Yu and Zinovi Krougly},
     journal = {Journal of Statistical Software},
     year = {2007},
-    volume = {23},
-    number = {5},
+    volume = {23(5)},
+    pages = {1--26},
     url = {http://www.jstatsoft.org/v23/i05/},
   }
