sorted and reformatted bib

--- a/manuscript/citations.bib
+++ b/manuscript/citations.bib
@@ -1,5 +1,5 @@
 @Manual{R,
-  title =	 {R: A Language and Environment for Statistical Computing},
+  title =	 {R: {A} Language and Environment for Statistical Computing},
   author =	 {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address =	 {Vienna, Austria},
@@ -8,7 +8,7 @@
 }
 
 @Manual{Rpkg:copula,
-  title =	 {copula: Multivariate Dependence with Copulas},
+  title =	 {{copula}: Multivariate Dependence with Copulas},
   author =	 {Marius Hofert and Ivan Kojadinovic and Martin Maechler and Jun
                   Yan},
   year =	 2020,
@@ -122,8 +122,8 @@
   title =	 {Two guidelines for bootstrap hypothesis testing},
   author =	 {Hall, Peter and Wilson, Susan R},
   journal =	 {Biometrics},
-  volume =       47,
-  number =       2,
+  volume =	 47,
+  number =	 2,
   pages =	 {757--762},
   year =	 1991,
   publisher =	 {JSTOR}
@@ -133,11 +133,22 @@
   title =	 {{E}lements of {C}opula {M}odeling with \textsf{R}},
   year =	 2018,
   publisher =	 {Springer},
-  address =      {New York},
+  address =	 {New York},
   isbn =	 {978-3-319-89635-9},
   url =		 {http://www.springer.com/de/book/9783319896342},
   author =	 {Marius Hofert and Ivan Kojadinovic and Martin Maechler and Jun
                   Yan},
+}
+
+@article{hyndman2008automatic,
+  title =	 {Automatic Time Series Forecasting: {T}he {forecast} Package
+                  for {R}},
+  author =	 {Rob J Hyndman and Yeasmin Khandakar},
+  journal =	 {Journal of Statistical Software},
+  volume =	 {26(3)},
+  pages =	 {1--22},
+  year =	 2008,
+  doi =		 {10.18637/jss.v027.i03},
 }
 
 @article{kolmogorov1933sulla,
@@ -188,7 +199,7 @@
 @article{marsaglia2003evaluating,
   author =	 {Marsaglia, George and Tsang, Wai Wan and Wang, Jingbo},
   journal =	 {Journal of Statistical Software},
-  volume =       {8(18)},
+  volume =	 {8(18)},
   pages =	 {1--4},
   title =	 {Evaluating {K}olmogorov's Distribution},
   volume =	 8,
@@ -204,6 +215,29 @@
   pages =	 {68--78},
   year =	 1951,
   publisher =	 {Taylor \& Francis}
+}
+
+@article{mcleod1975derivation,
+  title =	 {Derivation of the Theoretical Autocovariance Function of
+                  Autoregressive-Moving Average Time Series},
+  author =	 {McLeod, Ian},
+  journal =	 {Applied Statistics},
+  volume =	 24,
+  number =	 2,
+  pages =	 {255--256},
+  year =	 1975,
+  publisher =	 {Royal Statistical Society}
+}
+
+@article{mcleod2007algorithms,
+  title =	 {Algorithms for Linear Time Series Analysis: {W}ith {R}
+                  Package},
+  author =	 {A. I. McLeod and Hao Yu and Zinovi Krougly},
+  journal =	 {Journal of Statistical Software},
+  year =	 2007,
+  volume =	 {23(5)},
+  pages =	 {1--26},
+  url =		 {http://www.jstatsoft.org/v23/i05/},
 }
 
 @article{noether1963note,
@@ -240,7 +274,7 @@
 }
 
 @article{weiss1978modification,
-  title =	 {Modification of the {K}olmogorov-{S}mirnov Statistic for Use
+  title =	 {Modification of the {K}olmogorov--{S}mirnov Statistic for Use
                   with Correlated Data},
   author =	 {Marc S. Weiss},
   journal =	 {Journal of the American Statistical Association},
@@ -250,36 +284,3 @@
   year =	 1978,
   publisher =	 {Taylor \& Francis}
 }
-
-@article{hyndman2008automatic,
-    title = {Automatic Time Series Forecasting: {T}he {forecast} Package
-      for {R}},
-    author = {Rob J Hyndman and Yeasmin Khandakar},
-    journal = {Journal of Statistical Software},
-    volume = {26(3)},
-    pages = {1--22},
-    year = {2008},
-    doi = {10.18637/jss.v027.i03},
-  }
-
-@article{mcleod1975derivation,
-  title={Derivation of the Theoretical Autocovariance Function of Autoregressive-Moving Average Time Series},
-  author={McLeod, Ian},
-  journal={Applied Statistics},
-  volume={24},
-  number={2},
-  pages={255--256},
-  year={1975},
-  publisher={Royal Statistical Society}
-}
-
-  @article{mcleod2007algorithms,
-    title = {Algorithms for Linear Time Series Analysis: {W}ith {R}
-      Package},
-    author = {A. I. McLeod and Hao Yu and Zinovi Krougly},
-    journal = {Journal of Statistical Software},
-    year = {2007},
-    volume = {23(5)},
-    pages = {1--26},
-    url = {http://www.jstatsoft.org/v23/i05/},
-  }
